Wrong use of g_list_length() to know if a GList is empty
The following discussion from !76 (merged) should be addressed:
-
@antoniof started a discussion: (+3 comments) No need to count the number of files here. According to GList API docs for g_list_length():
To check whether the list is non-empty, it is faster to check list against NULL.
There are cases of this slow usage in nautilus-window.c, nautilus-progress-persistence-handler.c, and nautilus-properties-window.c.