general: Don't iterate GList to check for empty

According to `g_list_length()` API documentaion: "To check whether
the list is non-empty, it is faster to check list against NULL."

Checking `GList`s against `NULL` is already common in this codebase.

Weed out the few checks of `g_list_length()` against `0` or `< 1`.

Closes https://gitlab.gnome.org/GNOME/nautilus/issues/241